syntax = "proto3";

package stockPackage;

service StockPrice {
    rpc join(stock) returns (stream stock){}
    //rpc send(msg) returns (msg){}
}

message client {
    int32 id = 1;
}

message stock{
    string symbol = 1;
    float price = 2;
    int32 userID = 3;    
}


